Simplify code.